# b-fob-channel

./: .gitignore  LICENSE  README.md  cs-estimator-visualization.html  cs-phase-unwrap-viz.html  skills-lock.json
.claude/skills/: mem0
docs/: architecture.md  ble-connection-management.md  channel-sounding-reliability-plan.md  triangulation-math.md  validation-rollout-plan.md  validation-summary.md
firmware/: CMakeLists.txt  Kconfig  prj.conf
firmware/src/: main.c
firmware/src/ble/: CS_ESTIMATOR_README.md  ble_manager.c  ble_manager.h  cs_adapter.c  cs_adapter.h  cs_decision.c  cs_decision.h  cs_estimator.c  cs_estimator.h  cs_phase_unwrap.c  cs_phase_unwrap.h
firmware/src/config/: antenna_config.h  app_config.h
firmware/src/triangulation/: position.h  rssi_filter.c  rssi_filter.h  triangulation.c  triangulation.h
keyfob/: CMakeLists.txt  prj.conf
keyfob/src/: main.c
simulation/: cs_estimator_sim.py  rssi_model.py  triangulation_sim.py
tests/: test_rssi_filter.c  test_triangulation.c
